--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10"
   }
