--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10"
   }
