--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,11 +13,14 @@
     "react-pdf": "^9.2.1",
     "react-scripts": "5.0.1"
   },
+  "homepage": "https://ahdajj.github.io/Nederland-Taal",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "react-router-dom": "^7.5.0"
   }
 }
